--- a/_scss/app/app.scss
+++ b/_scss/app/app.scss
@@ -1,10 +1,8 @@
-@import 'app.vars';
-@import 'helpers/type-coercion';
-
-@import 'app.utils';
-
-
+@import 'helpers/core.type-coercion';
 @import 'app.config';
+
+@import 'tool';
+
 
 // Warning: don't include for production
 @import '_tests/media-query-parsing';
