--- a/_scss/app/_tool.scss
+++ b/_scss/app/_tool.scss
@@ -1,12 +1,7 @@
-//
-// Set media queries unless is app-ie.scss.
-// For IE, don't wrap the styles in media queries
-//
-
 @mixin respond-min($width) {
 	// if we're outputting for a fixed media query set...
 	@if $fix-mqs {
-		// ...and if the styles match lower bound stipulated by $fix-mqs in app-ie.scss
+		// ...and if the styles concern region larger than supported lower bound (stipulated by $fix-mqs in app-basic.scss)
 		@if $fix-mqs <= $width {
 			@content;
 		}
@@ -22,7 +17,7 @@
 @mixin respond-max($width) {
 	// if we're outputting for a fixed media query set...
 	@if $fix-mqs {
-		// ...and if the styles concern region larger than supported lower bound (stipulated by $fix-mqs in app-ie.scss)
+		// ...and if the styles concern region larger than supported lower bound (stipulated by $fix-mqs in app-basic.scss)
 		@if $fix-mqs <= $width {
 			@content;
 		}
@@ -37,13 +32,11 @@
 
 
 //
-// Inject IE styles inline without outputting to other browsers
+// Helper to inject IE styles inline without outputting to other browsers
 // Compiles to app-ie.scss
 //
 
 @mixin old-ie {
-	// Only use this content if we're dealing with old IE
-	// In the `project-ie.scss` file we set this variable to `true`
 	@if $is-ie {
 		@content;
 	}
