--- a/_scss/app/app.scss
+++ b/_scss/app/app.scss
@@ -10,6 +10,6 @@
 @import 'tool';
 
 
-/** Start your imports from here **/
+/** Start your imports here **/
 
 @import '_tests/media-query-parsing';   // Warning: don't include for production
